--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "git:push": "git add . && git commit -m \"Updated commit\" && git push"
   },
   "keywords": [],
   "author": "",
