--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "git:push": "git add . && git commit -m \"Updated commit\" && git push"
+    "git:push": "git add . && git commit -m \"Push Changes\" && git push",
+    "start": "npx ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.4.0",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
+    "types": "^0.1.1",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.18.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   }
 }
