--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "budget_plan_api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "git:push": "git add . && git commit -m \"Push Changes\" && git push",
-    "start": "npx ts-node src/index.ts"
+    "start": "node dist/index.js",
+    "dev": "npx ts-node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
