--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "git:push": "git add . && git commit -m \"Push Changes\" && git push",
     "start": "node dist/index.js",
-    "dev": "npx ts-node src/index.ts",
+    "serve": "nodemon --exec ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.4.0",
+    "nodemon": "^3.1.4",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "types": "^0.1.1",
